finished website sketch and layout

--- a/src/input.css
+++ b/src/input.css
@@ -3,3 +3,7 @@
 @import "tailwindcss/components";
 
 @import "tailwindcss/utilities";
+
+.menu-icon {
+    @apply mr-5 p-2 pl-8 pr-8 border-2 border-black bg-slate-100 rounded-lg shadow-menu-box-teal hover:shadow-menu-box-orange;
+}
