--- a/public/output.css
+++ b/public/output.css
@@ -806,7 +806,7 @@ video {
 
 .post-topic {
   position: absolute;
-  top: 11rem;
+  top: 9rem;
   width: 100%;
   background-color: rgb(229 229 229 / var(--tw-bg-opacity));
   --tw-bg-opacity: 0.8;
@@ -851,6 +851,54 @@ video {
 .read-more-btn:hover {
   --tw-shadow: 3px 3px #FF9F64;
   --tw-shadow-colored: 3px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.load-more-btn {
+  margin: 1.25rem;
+  font-weight: 700;
+  --tw-text-opacity: 1;
+  color: rgb(30 41 59 / var(--tw-text-opacity));
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  margin-right: 1.25rem;
+  border-radius: 0.5rem;
+  border-width: 2px;
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(241 245 249 / var(--tw-bg-opacity));
+  padding: 0.5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+  --tw-shadow: 3px 3px #84fbe9;
+  --tw-shadow-colored: 3px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.load-more-btn:hover {
+  --tw-shadow: 3px 3px #FF9F64;
+  --tw-shadow-colored: 3px 3px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.load-more-btn:focus {
+  opacity: 0.85;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.load-more-btn:active {
+  opacity: 0.85;
+}
+
+.load-more-btn:disabled {
+  pointer-events: none;
+  opacity: 0.5;
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
