--- a/src/input.css
+++ b/src/input.css
@@ -11,11 +11,14 @@
     @apply transform transition duration-300 hover:scale-110;
 }
 .post-topic {
-    @apply font-bold text-slate-800 w-full absolute top-44 bg-opacity-80 bg-neutral-200;
+    @apply font-bold text-slate-800 w-full absolute top-36 bg-opacity-80 bg-neutral-200;
 }
 .post-read-time {
     @apply absolute top-2 left-2 bg-neutral-200 text-black rounded-full flex items-center bg-opacity-80;
 }
 .read-more-btn {
     @apply  border-2 border-black m-auto rounded-lg p-2 pl-2 pr-2 border-2 font-bold border-slate-800 bg-slate-200 text-slate-800 rounded-lg shadow-read-btn-teal hover:shadow-menu-box-orange;
+}
+.load-more-btn {
+    @apply font-bold text-slate-800 menu-icon m-5 transition-all focus:opacity-[0.85] focus:shadow-none active:opacity-[0.85] disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none
 }
