--- a/public/output.css
+++ b/public/output.css
@@ -703,12 +703,20 @@ video {
   --tw-gradient-to: #6fb5c2 var(--tw-gradient-to-position);
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-3 {
   padding: 0.75rem;
 }
 
 .p-5 {
   padding: 1.25rem;
+}
+
+.p-1 {
+  padding: 0.25rem;
 }
 
 .text-center {
