--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/x-icon" href="/public/images/kot.png" />
 </head>
 <body class="h-screen w-screen bg-gradient-to-b from-grad-t to-grad-b font-lato">
-    <!-- główny kontener -->
+    <!-- main container -->
     <div class="h-screen flex flex-col">
         
         <%- include('menu'); %>
 
-        <!-- kontener na artykuły -->
+        <!-- article container -->
         <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
             <h1 class="text-6xl m-10 p-5">Dodaj podtytuł</h1>
             <article class="text-xl m-10 p-5">Dodaj tekst</article>
