--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,22 +1,28 @@
+<!-- wpis na bloga -->
 <!DOCTYPE html>
 <html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= post.attributes.title %></title>
-    <link rel="stylesheet" href="/public/output.css">
+    <title>My path in IT industry</title>
+    <link rel="stylesheet" href="../public/output.css">
     <link rel="icon" type="image/x-icon" href="/public/images/kot.png" />
 </head>
 <body class="h-full w-screen bg-gradient-to-b from-grad-t to-grad-b font-lato">
-    <!-- główny kontener -->
+    <!-- main container -->
     <div class="h-full flex flex-col">
         
         <%- include('menu'); %>
 
-        <!-- kontener na treść posta -->
-        <main class="m-10 mb-0 flex flex-auto flex-col items-center justify-center text-neutral-200">
-            <h1 class="text-6xl m-10 p-5"><%= post.attributes.title %></h1>
-            <article class="text-xl m-10 p-5"><%= content %></article>
+        <!-- article container -->
+        <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
+      
+          <!-- post contents -->
+          <h1 class="text-6xl m-10"><%= title %></h1>
+          <article class="rounded-lg bg-slate-500 text-xl m-10 mt-0 p-5">
+             <span class="opacity-100"><%- content %></span>
+          </article>
+
         </main>
 
         <%- include('footer'); %>
