--- a/views/about.ejs
+++ b/views/about.ejs
@@ -8,12 +8,12 @@
     <link rel="icon" type="image/x-icon" href="/public/images/kot.png" />
 </head>
 <body class="h-screen w-screen bg-gradient-to-b from-grad-t to-grad-b font-lato">
-    <!-- główny kontener -->
+    <!-- main contaienr -->
     <div class="h-screen flex flex-col">
         
         <%- include('menu'); %>
 
-        <!-- kontener na artykuły -->
+        <!-- article container -->
         <main class="flex flex-auto flex-col items-center text-neutral-200">
             <!-- header -->
             <div>
