--- a/views/recent-posts.ejs
+++ b/views/recent-posts.ejs
@@ -1,3 +1,4 @@
+<!-- 3 recent -->
 <p class="mt-5">Recent Posts: </p>
 <div class="flex">
   <% const lastThreePosts = posts.slice(0, 3); %>
@@ -10,9 +11,7 @@
       </span>
       <p class="post-topic"><%= post.title %></p>
       <br>
-      <span class="p-5 border-2 border-black m-auto rounded-lg read-more-btn">
-        <a href="/blog/post/<%= post.filename %>" target="_blank">Read More</a>
-      </span>
+      <span><a class="p-5 border-2 border-black m-auto rounded-lg read-more-btn " href="/blog/<%= post.filename %>" target="_blank">Read More</a></span>
     </div>
   <% }); %>
 </div>
