--- a/views/post.ejs
+++ b/views/post.ejs
@@ -19,7 +19,7 @@
       
           <!-- post contents -->
           <h1 class="text-6xl m-10"><%= title %></h1>
-          <article class="rounded-lg bg-slate-500 text-xl m-10 mt-0 p-5">
+          <article class="text-slate-900 rounded-lg bg-neutral-200 bg-opacity-90 text-xl m-10 mt-0 p-5">
              <span class="opacity-100"><%- content %></span>
           </article>
 
