--- a/views/recent-posts.ejs
+++ b/views/recent-posts.ejs
@@ -11,7 +11,7 @@
       </span>
       <p class="post-topic"><%= post.title %></p>
       <br>
-      <span><a class="p-5 border-2 border-black m-auto rounded-lg read-more-btn " href="/blog/<%= post.filename %>" target="_blank">Read More</a></span>
+      <span><a class="p-5 border-2 border-black m-auto rounded-lg read-more-btn " href="/blog/<%= post.filename %>">Read More</a></span>
     </div>
   <% }); %>
 </div>
