Documentation and cleanup

--- a/views/404.ejs
+++ b/views/404.ejs
@@ -15,8 +15,8 @@
 
         <!-- kontener na artykuły -->
         <main class="flex flex-auto flex-col items-center justify-center text-neutral-200">
-            <h1 class="text-6xl m-10 p-5">OOOPS! Something went wrong!</h1>
-            <article class="text-xl m-10 p-5">Site you are looking for does not exists!</article>
+            <h1 class="text-6xl m-10 p-5">OOOPS! Something went wrong! </h1>
+            <article class="text-xl m-10 p-5">(404) Site you are looking for does not exists!</article>
             
         </main>
 
